# automiq_tt

./: Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: pylint.yml  test.yml
app/: permutation.py
app/api/: __init__.py  view.py
app/templates/: index.html  result.html
my_app/: permutation.py
my_app/api/: __init__.py  view.py
my_app/templates/: index.html
tests/: test_permutation.py  test_view.py
